--- a/UniversalCalculator/MainMenu.xaml
+++ b/UniversalCalculator/MainMenu.xaml
@@ -15,6 +15,7 @@
         <Button Content="Currency Calculator" HorizontalAlignment="Center"  Margin="0,450,0,0" VerticalAlignment="Top" Width="250" Height="100" FontSize="24" Click="Button_Click_3"/>
         <Button Content="Exit" HorizontalAlignment="Center"  Margin="0,575,0,0" VerticalAlignment="Top" Width="250" Height="100" FontSize="24" Click="Button_Click_4"/>
         <Image Source="/Assets/abacus.PNG" HorizontalAlignment="Right" VerticalAlignment="Top" Height="140" Width="164"/>
+		<Button Content="Trip Calculator" HorizontalAlignment="Center"  Margin="0,700,0,0" VerticalAlignment="Top" Width="250" Height="100" FontSize="24" Click="Button_Click_5"/>
 
 
     </Grid>
